legacy/differential_testing/regression_ts/gcc_reg_cb/results/gcc540/save_st/pr79757-2.c-5.4.0-3.out.txt
pr79757-2.c: In function ‘fn1’:
pr79757-2.c:10:3: error: parameter ‘z’ is initialized
   unsigned long long z = x / y;  
   ^
pr79757-2.c: In function ‘fn2’:
pr79757-2.c:16:3: error: parameter ‘z’ is initialized
   unsigned long long z = x >> y;  
   ^
